--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -100,10 +100,10 @@
       height: 100%;
 
       h3, p, a {
-        padding: 0px 0px 0px 30px;
-        margin: 0px;
+        padding: 0 0 0 30px;
+        margin: 0;
         @media only screen and (max-width: 600px) {
-          padding: 0px 0px 0px 10px;
+          padding: 0 0 0 10px;
         }
       }
       h3 {
@@ -127,7 +127,7 @@
         line-height: 24px;
         max-height: 48px;
         overflow: hidden;
-        margin: 0px;
+        margin: 0;
 
         @media only screen and (max-width: 600px) {
           font-size: 12px;
